--- a/package.json
+++ b/package.json
@@ -16,5 +16,17 @@
   "bugs": {
     "url": "https://github.com/Reffin/kodego-website-clone/issues"
   },
-  "homepage": "https://github.com/Reffin/kodego-website-clone#readme"
+  "homepage": "https://github.com/Reffin/kodego-website-clone#readme",
+  "devDependencies": {
+    "css-loader": "^6.7.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss-import": "^15.0.1",
+    "postcss-loader": "^7.0.2",
+    "postcss-nested": "^6.0.0"
+  }
 }
