--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,6 +26,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.13",
+    "normalize.css": "^8.0.1",
     "postcss-import": "^15.0.1",
     "postcss-loader": "^7.0.2",
     "postcss-nested": "^6.0.0"
